# icu

./: CMakeLists.txt
source/common/: CMakeLists.txt
source/i18n/: CMakeLists.txt
source/tools/genrb/: CMakeLists.txt
source/tools/pkgdata/: CMakeLists.txt
source/tools/toolutil/: CMakeLists.txt
