add_library(
    icui18n
    ${sources}
    alphaindex.cpp
    anytrans.cpp
    anytrans.h
    astro.cpp
    astro.h
    basictz.cpp
    bocsu.cpp
    bocsu.h
    brktrans.cpp
    brktrans.h
    buddhcal.cpp
    buddhcal.h
    calendar.cpp
    casetrn.cpp
    casetrn.h
    cecal.cpp
    cecal.h
    chnsecal.cpp
    chnsecal.h
    choicfmt.cpp
    coleitr.cpp
    coll.cpp
    collation.cpp
    collation.h
    collationbuilder.cpp
    collationbuilder.h
    collationcompare.cpp
    collationcompare.h
    collationdata.cpp
    collationdata.h
    collationdatabuilder.cpp
    collationdatabuilder.h
    collationdatareader.cpp
    collationdatareader.h
    collationdatawriter.cpp
    collationdatawriter.h
    collationfastlatin.cpp
    collationfastlatin.h
    collationfastlatinbuilder.cpp
    collationfastlatinbuilder.h
    collationfcd.cpp
    collationfcd.h
    collationiterator.cpp
    collationiterator.h
    collationkeys.cpp
    collationkeys.h
    collationroot.cpp
    collationroot.h
    collationrootelements.cpp
    collationrootelements.h
    collationruleparser.cpp
    collationruleparser.h
    collationsets.cpp
    collationsets.h
    collationsettings.cpp
    collationsettings.h
    collationtailoring.cpp
    collationtailoring.h
    collationweights.cpp
    collationweights.h
    collunsafe.h
    compactdecimalformat.cpp
    coptccal.cpp
    coptccal.h
    cpdtrans.cpp
    cpdtrans.h
    csdetect.cpp
    csdetect.h
    csmatch.cpp
    csmatch.h
    csr2022.cpp
    csr2022.h
    csrecog.cpp
    csrecog.h
    csrmbcs.cpp
    csrmbcs.h
    csrsbcs.cpp
    csrsbcs.h
    csrucode.cpp
    csrucode.h
    csrutf8.cpp
    csrutf8.h
    curramt.cpp
    currfmt.cpp
    currfmt.h
    currpinf.cpp
    currunit.cpp
    dangical.cpp
    dangical.h
    datefmt.cpp
    dayperiodrules.cpp
    dayperiodrules.h
    dcfmtsym.cpp
    decContext.cpp
    decContext.h
    decimfmt.cpp
    decNumber.cpp
    decNumber.h
    decNumberLocal.h
    double-conversion.h
    double-conversion-bignum.cpp
    double-conversion-bignum.h
    double-conversion-bignum-dtoa.cpp
    double-conversion-bignum-dtoa.h
    double-conversion-cached-powers.cpp
    double-conversion-cached-powers.h
    double-conversion-diy-fp.h
    double-conversion-double-to-string.cpp
    double-conversion-double-to-string.h
    double-conversion-fast-dtoa.cpp
    double-conversion-fast-dtoa.h
    double-conversion-ieee.h
    double-conversion-string-to-double.cpp
    double-conversion-string-to-double.h
    double-conversion-strtod.cpp
    double-conversion-strtod.h
    double-conversion-utils.h
    dt_impl.h
    dtfmtsym.cpp
    dtitv_impl.h
    dtitvfmt.cpp
    dtitvinf.cpp
    dtptngen.cpp
    dtptngen_impl.h
    dtrule.cpp
    erarules.cpp
    erarules.h
    esctrn.cpp
    esctrn.h
    ethpccal.cpp
    ethpccal.h
    fmtable.cpp
    fmtable_cnv.cpp
    fmtableimp.h
    format.cpp
    formatted_string_builder.cpp
    formatted_string_builder.h
    formattedval_impl.h
    formattedval_iterimpl.cpp
    formattedval_sbimpl.cpp
    formattedvalue.cpp
    fphdlimp.cpp
    fphdlimp.h
    fpositer.cpp
    funcrepl.cpp
    funcrepl.h
    gender.cpp
    gregocal.cpp
    gregoimp.cpp
    gregoimp.h
    hebrwcal.cpp
    hebrwcal.h
    indiancal.cpp
    indiancal.h
    inputext.cpp
    inputext.h
    islamcal.cpp
    islamcal.h
    japancal.cpp
    japancal.h
    listformatter.cpp
    measfmt.cpp
    measunit.cpp
    measunit_extra.cpp
    measunit_impl.h
    measure.cpp
    msgfmt.cpp
    msgfmt_impl.h
    name2uni.cpp
    name2uni.h
    nfrlist.h
    nfrs.cpp
    nfrs.h
    nfrule.cpp
    nfrule.h
    nfsubs.cpp
    nfsubs.h
    nortrans.cpp
    nortrans.h
    nounit.cpp
    nultrans.cpp
    nultrans.h
    number_affixutils.cpp
    number_affixutils.h
    number_asformat.cpp
    number_asformat.h
    number_capi.cpp
    number_compact.cpp
    number_compact.h
    number_currencysymbols.cpp
    number_currencysymbols.h
    number_decimalquantity.cpp
    number_decimalquantity.h
    number_decimfmtprops.cpp
    number_decimfmtprops.h
    number_decnum.h
    number_fluent.cpp
    number_formatimpl.cpp
    number_formatimpl.h
    number_grouping.cpp
    number_integerwidth.cpp
    number_longnames.cpp
    number_longnames.h
    number_mapper.cpp
    number_mapper.h
    number_microprops.h
    number_modifiers.cpp
    number_modifiers.h
    number_multiplier.cpp
    number_multiplier.h
    number_notation.cpp
    number_output.cpp
    number_padding.cpp
    number_patternmodifier.cpp
    number_patternmodifier.h
    number_patternstring.cpp
    number_patternstring.h
    number_rounding.cpp
    number_roundingutils.h
    number_scientific.cpp
    number_scientific.h
    number_skeletons.cpp
    number_skeletons.h
    number_types.h
    number_utils.cpp
    number_utils.h
    number_utypes.h
    numfmt.cpp
    numparse_affixes.cpp
    numparse_affixes.h
    numparse_compositions.cpp
    numparse_compositions.h
    numparse_currency.cpp
    numparse_currency.h
    numparse_decimal.cpp
    numparse_decimal.h
    numparse_impl.cpp
    numparse_impl.h
    numparse_parsednumber.cpp
    numparse_scientific.cpp
    numparse_scientific.h
    numparse_symbols.cpp
    numparse_symbols.h
    numparse_types.h
    numparse_utils.h
    numparse_validators.cpp
    numparse_validators.h
    numrange_fluent.cpp
    numrange_impl.cpp
    numrange_impl.h
    numsys.cpp
    numsys_impl.h
    olsontz.cpp
    olsontz.h
    persncal.cpp
    persncal.h
    plurfmt.cpp
    plurrule.cpp
    plurrule_impl.h
    quant.cpp
    quant.h
    quantityformatter.cpp
    quantityformatter.h
    rbnf.cpp
    rbt.cpp
    rbt.h
    rbt_data.cpp
    rbt_data.h
    rbt_pars.cpp
    rbt_pars.h
    rbt_rule.cpp
    rbt_rule.h
    rbt_set.cpp
    rbt_set.h
    rbtz.cpp
    regexcmp.cpp
    regexcmp.h
    regexcst.h
    regeximp.cpp
    regeximp.h
    regexst.cpp
    regexst.h
    regextxt.cpp
    regextxt.h
    region.cpp
    region_impl.h
    reldatefmt.cpp
    reldtfmt.cpp
    reldtfmt.h
    rematch.cpp
    remtrans.cpp
    remtrans.h
    repattrn.cpp
    rulebasedcollator.cpp
    scientificnumberformatter.cpp
    scriptset.cpp
    scriptset.h
    search.cpp
    selfmt.cpp
    selfmtimpl.h
    sharedbreakiterator.cpp
    sharedbreakiterator.h
    sharedcalendar.h
    shareddateformatsymbols.h
    sharednumberformat.h
    sharedpluralrules.h
    simpletz.cpp
    smpdtfmt.cpp
    smpdtfst.cpp
    smpdtfst.h
    sortkey.cpp
    standardplural.cpp
    standardplural.h
    string_segment.cpp
    string_segment.h
    strmatch.cpp
    strmatch.h
    strrepl.cpp
    strrepl.h
    stsearch.cpp
    taiwncal.cpp
    taiwncal.h
    timezone.cpp
    titletrn.cpp
    titletrn.h
    tmunit.cpp
    tmutamt.cpp
    tmutfmt.cpp
    tolowtrn.cpp
    tolowtrn.h
    toupptrn.cpp
    toupptrn.h
    translit.cpp
    transreg.cpp
    transreg.h
    tridpars.cpp
    tridpars.h
    tzfmt.cpp
    tzgnames.cpp
    tzgnames.h
    tznames.cpp
    tznames_impl.cpp
    tznames_impl.h
    tzrule.cpp
    tztrans.cpp
    ucal.cpp
    ucln_in.cpp
    ucln_in.h
    ucol.cpp
    ucol_imp.h
    ucol_res.cpp
    ucol_sit.cpp
    ucoleitr.cpp
    ucsdet.cpp
    udat.cpp
    udateintervalformat.cpp
    udatpg.cpp
    ufieldpositer.cpp
    uitercollationiterator.cpp
    uitercollationiterator.h
    ulistformatter.cpp
    ulocdata.cpp
    umsg.cpp
    umsg_imp.h
    unesctrn.cpp
    unesctrn.h
    uni2name.cpp
    uni2name.h
    unum.cpp
    unumsys.cpp
    upluralrules.cpp
    uregex.cpp
    uregexc.cpp
    uregion.cpp
    usearch.cpp
    uspoof.cpp
    uspoof_build.cpp
    uspoof_conf.cpp
    uspoof_conf.h
    uspoof_impl.cpp
    uspoof_impl.h
    usrchimp.h
    utf16collationiterator.cpp
    utf16collationiterator.h
    utf8collationiterator.cpp
    utf8collationiterator.h
    utmscale.cpp
    utrans.cpp
    vtzone.cpp
    vzone.cpp
    vzone.h
    windtfmt.cpp
    windtfmt.h
    winnmfmt.cpp
    winnmfmt.h
    wintzimpl.cpp
    wintzimpl.h
    zonemeta.cpp
    zonemeta.h
    zrule.cpp
    zrule.h
    ztrans.cpp
    ztrans.h
)

target_compile_definitions(icui18n PRIVATE U_I18N_IMPLEMENTATION)
target_link_libraries(icui18n PUBLIC icuuc)

if(NOT BUILD_SHARED_LIBS)
  if(MSVC)
    target_compile_definitions(icui18n PUBLIC U_STATIC_IMPLEMENTATION)
  else()
    target_compile_definitions(icui18n PUBLIC $<BUILD_INTERFACE:U_STATIC_IMPLEMENTATION>)
  endif()
endif()

target_include_directories(
    icui18n
    PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
)

install(
    DIRECTORY unicode
    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
    FILES_MATCHING
    PATTERN "*.h"
)

install(
    TARGETS icui18n
    EXPORT "${TARGETS_EXPORT_NAME}"
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
)

set_target_properties(icui18n PROPERTIES EXPORT_NAME i18n)

# Name expected by Boost
if(MSVC)
  set_target_properties(icui18n PROPERTIES OUTPUT_NAME icuin)
endif()
